# ave_lablab

./: .gitignore  manifest.html  package.json  pnpm-lock.yaml  pyproject.toml  spec.md  techspec.md
.trunk/: trunk.yaml
ave/: autogen_example.ipynb  crewai_example.ipynb  langchain_example.ipynb  nb_executor.py  protocol.py
frontend/ave/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/ave/public/data/: agents_data.json
frontend/ave/src/app/(app)/: page.tsx
frontend/ave/src/components/: command-menu.tsx  icons.tsx  main-nav.tsx  mobile-nav.tsx  mode-toggle.tsx  site-header.tsx  social-graph.tsx
frontend/ave/src/config/: site.ts
frontend/ave/src/lib/: types.ts
