[tool.poetry]
name = "ave"
version = "0.1.0"
description = ""
authors = ["Arseni Zemskov <scvsh@vetki.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13"
pandas = "^2.2.2"
pyautogen = "^0.2.35"
catan = "^0.4.3"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-core = "^0.2.0"
networkx = "^3.3"
composio-openai = "^0.5.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
